syntax = "proto3";

option csharp_namespace = "KBMGrpcService.Protos";

package kbm;

// Organization service definition.
service OrganizationProtoService {
	rpc CreateOrganization (CreateOrganizationRequest) returns (CreateOrganizationResponse);
	rpc GetOrganizationById (GetOrganizationByIdRequest) returns (OrganizationResponse);
	rpc QueryOrganizations (QueryOrganizationsRequest) returns (QueryOrganizationsResponse);
	rpc UpdateOrganization (UpdateOrganizationRequest) returns (OrganizationResponse);
	rpc DeleteOrganization (DeleteOrganizationRequest) returns (DeleteOrganizationResponse);
}

// Organization messages
message CreateOrganizationRequest {
	string name = 1;
	string address = 2;
}

message CreateOrganizationResponse {
	int32 id = 1;
}

message GetOrganizationByIdRequest {
	int32 id = 1;
}

message UpdateOrganizationRequest {
	int32 id = 1;
	string name = 2;
	string address = 3;
}

message OrganizationResponse {
	string id = 1;
	string name = 2;
	string address = 3;
	string createdAt = 4;
	string updatedAt = 5;
}

message QueryOrganizationsRequest {
	int32 page = 1;
	int32 pageSize = 2;
	string orderBy = 3;
	string direction = 4;
	string queryString = 5;
}

message QueryOrganizationsResponse {
	int32 page = 1;
	int32 pageSize = 2;
	int32 total = 3;
	repeated OrganizationResponse organizations = 4;
}

message DeleteOrganizationRequest {
	int32 id = 1;
}

message DeleteOrganizationResponse {
	bool success = 1;
}